<resources>
    <string name="app_name">PracticaLatina</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Iniciar</string>
    <string name="error_email">Error en el formato del email</string>
    <string name="error_pass">La contraseña debe contener al menos 8 caracteres</string>
    <string name="title_producto_list">Productos</string>
    <string name="title_producto_detail">Producto Detail</string>
        <string name="login_user">Email</string>
        <string name="login_pass">Clave</string>
        <string name="login_q">¿Tienes una cuenta?, </string>
        <string name="login_r">Crea una aquí</string>
        <string name="login_btn">Ingresar</string>
        <string name="toolbar_titulo">Crear Cuenta</string>
        <string name="usercard">Mel Nielsen</string>
        <string name="card_text">Hace</string>
        <string name="card_dias">0 días</string>
        <string name="text_card_number">0 like</string>
        <string name="text_card_number2">0 like</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="step_btn_back">anterior</string>
        <string name="step_btn_next">siguiente</string>
        <string name="rg_user_titulo">Usuario</string>
        <string name="rg_user_name_edit">Nombre</string>
        <string name="rg_user_lastname_edit">Apellido</string>
        <string name="rg_user_email_edit">Email</string>
        <string name="rg_user_pass_edit">Contraseña</string>
        <string name="rg_user_pass_confirm_edit">Confirmar Contraseña</string>
        <string name="registro_completo_btn">Registrar</string>
        <string name="rg_user_generales_titulo">Datos Personales</string>
        <string name="rg_user_cedula_edit">Cédula</string>
        <string name="rg_user_nacimiento">Fecha de Nacimiento</string>
        <string name="rg_user_btn_fecha">Calendario</string>
        <string name="rg_user_sexo">Sexo</string>
        <string name="rg_user_etnia">Etnia</string>
        <string name="rg_user_dir_titulo">Contacto</string>
        <string name="rg_user_provincia">Provincia</string>
        <string name="rg_user_distrito">Distrito</string>
        <string name="rg_user_corregimiento">Corregimiento</string>
        <string name="rg_user_direccion">Dirección</string>
        <string name="rg_user_telefono">Nº Telefono</string>
        <string name="error_email_vacio">este campo esta vacio</string>
        <string name="rg_user_medidas_titulo">Medidas</string>
        <string name="rg_peso">Peso</string>
        <string name="rg_altura">Altura</string>
        <string name="tb_medical_tittle">Perfil</string>
        <string name="tb_lista_tittle">Medidas</string>
        <string name="tb_calendario_tittle">Calendario</string>
        <string name="title_activity_referencia">ReferenciaActivity</string>
        <string name="hint_username">Nombre de usuario</string>
        <string name="hint_password">Contraseña</string>
        <string name="text_button_login">Login</string>
        <string name="dont_have_account">¿No tienes cuenta?,</string>
        <string name="create_here">crea una aquí</string>
        <string name="hint_email">Correo</string>
        <string name="hint_name">Nombre</string>
        <string name="hint_user">Usuario</string>
        <string name="hint_confirm_password">Confirmar Contraseña</string>
        <string name="text_button_createaccount">Únete</string>
        <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
        <string name="username_card">Uriel Ramírez</string>
        <string name="firstword_card">Hace</string>
        <string name="timecard_card">4 días</string>
        <string name="likenumbercard_card">10 Me Gusta</string>
        <string name="tab_search">Buscar</string>
        <string name="tab_home">Home</string>
        <string name="tab_profile">Yo</string>
        <string name="secondword_detail">Me Gusta</string>
        <string name="titleimagedetail">\"Todo copas en la playa\"</string>
        <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
        <string name="transitionname_picture">transitionnamepicture</string>
        <string name="lb_medidas">Sistólica / Diastólica</string>
        <string name="lb_medidas_mmhg">mmHg</string>
        <string name="lb_medidas_pls">Pulso</string>
        <string name="lb_medidas_bmp">Bpm</string>
        <string name="toolbar_titulo_medidas">Registro de Medidas</string>
        <string name="toolbar_titulo_detalle">Detalle de Medida</string>
        <string name="detalles_medidas">Detalles de la Medida</string>
        <string name="detalle_Sys">Sistólica</string>
        <string name="detalle_Dis">Diastólica</string>
        <string name="detalle_titulo">Detalles</string>
        <string name="detalle_pls">Pulso</string>
        <string name="detalle_fecha_titulo">Medida captada el:</string>
        <string name="info_nueva_medida">Ingresar su peso en KILOGRAMOS</string>
        <string name="info_nueva_glucosa">(Basal/Antes de comida)</string>
        <string name="nuevo_peso_titulo">Nuevo Peso</string>
        <string name="toolbar_titulo_Pesos">Registro de Peso</string>
        <string name="estado_general_titulo">Estado General de sus Medidas</string>
        <string name="estado_general_medidas_titulo">Medidas</string>
        <string name="medidas_titulo_graf">Gráfica de medidas</string>
        <string name="hba1c_titulo_graf">Gráfica de Hemoglobina Glucosilada</string>
        <string name="graf_peso_titulo">Gráfica de Peso-IMC</string>
        <string name="lb_medidas_fecha">Fecha</string>
        <string name="btn_fecha">fecha</string>
        <string name="error_txt_cedula">Este Campo no puede estar vacio</string>
        <string name="rg_user_asiento_edit">Asiento</string>
        <string name="rg_user_tomo_edit">Tomo</string>
        <string name="error_pass_noMatch">Las claves no son iguales</string>
        <string name="msj_bienvenida">Bienvenido</string>
        <string name="menu_signout">Salir</string>
        <string name="error_email_coincidencia">Correo no Registrado!</string>
        <string name="title_activity_main2">Main2Activity</string>
        <string name="action_settings">Settings</string>
        <string name="section_format">Hello World from section: %1$d</string>
        <string name="cuadro_Optimo">Óptimo</string>
        <string name="cuadro_normal">Normal</string>
        <string name="cuadro_normal_alto">Alta</string>
        <string name="cuadro_grado1">HTA G1</string>
        <string name="cuadro_grado3">HTA G3</string>
        <string name="cuadro_grado2">HTA G2</string>
        <string name="cuadro_gradoAislada">SYS Aislada</string>
        <string name="title_activity_app_home">AppHomeActivity</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="title_activity_hta">HTAActivity</string>
        <string name="title_medidahta_list">MedidasHTA</string>
        <string name="title_medidahta_detail">MedidaHTA Detail</string>
        <string name="btn_guardar">Guardar</string>
        <string name="title_nuevamedida">Nueva Medida</string>
        <string name="text_edit_menu">Editar</string>
        <string name="msj_borrar_medida">Seguro desea eliminar esta Medida?</string>
        <string name="text_drop_menu">Eliminar</string>
        <string name="syncLabel">Sync</string>
        <string name="title_activity_home_hta">HomeHTAActivity</string>
        <string name="title_activity_home">HomeActivity</string>
        <string name="text_launch_hta">Presión Arterial</string>
        <string name="text_launch_glucosa">Glucosa</string>
        <string name="title_presionarterial">Presión Arterial</string>
        <string name="title_activity_new_home_hta">NewHomeHTAActivity</string>
        <string name="salir">Salir</string>
        <string name="tips">Consejos:</string>
        <string name="msg_load">cargando datos...</string>
        <string name="msg_error_conection">Error de conexión</string>
        <string name="msg_empty_conection">No tiene Registros...</string>
        <string name="dialog_title_edit">Realizando Actualización..</string>
        <string name="title_nuevamedida_edit">Editar Medida</string>
        <string name="btn_cancelar">CANCELAR</string>
        <string name="eliminar">Eliminar</string>
        <string name="cancel">Cancelar</string>
        <string name="dialog_title_eliminar">Atención</string>
        <string name="dialog_msg_eliminar">Está a punto de eliminar una medida...</string>
        <string name="error_email_credencial">Verificar credenciales</string>
        <string name="error_pass_credencial">Verificar Clave</string>
        <string name="text_launch_user">Perfil</string>
        <string name="m">Mujer</string>
        <string name="h">Hombre</string>
        <string name="tomarfoto">Tomar foto</string>
        <string name="cargarImg">Cargar imagen</string>
        <string name="titulo_foto_dialog">Seleccione una opción:</string>
        <string name="update">Actualizar</string>
        <string name="title_activity_med_antro_main">MedAntroMainActivity</string>
        <string name="tab_text_1">Tab 1</string>
        <string name="tab_text_2">Tab 2</string>
        <string name="tab_text_3">Tab 3</string>
        <string name="text_launch_peso">Peso / IMC</string>
        <string name="title_pesoActivity">Mod Peso</string>
        <string name="title_cinturaActivity">Cintura</string>
        <string name="title_glucosaActivity">Glucosa</string>
        <string name="title_bluetooth">Dispositivos Bluetooth</string>
        <string name="editar_peso_title">Editar Medida</string>
        <string name="title_medidas_Graficas">Medida en la Tabla de Calificación</string>
        <string name="title_activity_cintura">CinturaActivity</string>
        <string name="text_launch_cintura">Cintura/altura</string>
        <string name="none_paired">Ningun dispositivo pudo ser emparejado</string>
        <string name="new_message_notification_title_template">New message: %1$s</string>
        <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
        <string name="action_share">Share</string>
        <string name="action_reply">Reply</string>
        <string name="nuevo_WebTerminos_titulo">Términos y Condiciones</string>
        <string name="accept">Acepto</string>
        <string name="semena">Semana</string>
        <string name="title_terminos">Términos y Condiciones</string>
        <string name="title_politica">Política de Privacidad</string>
        <string name="title_disclaimer">Disclaimer</string>
        <string name="title_ayuda">Ayuda</string>
        <string name="text_launch_noti">Notificaciones</string>
</resources>