<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_blood_presure"
            android:title="@string/text_launch_hta" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_peso"
            android:title="@string/text_launch_peso" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/food"
            android:title="@string/text_launch_cintura" />
        <item
            android:id="@+id/nav_glucosa"
            android:icon="@drawable/ic_glucosa"
            android:title="@string/text_launch_glucosa" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_user"
            android:title="@string/text_launch_user" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/food"
            android:title="@string/text_launch_noti" />
    </group>

    <item android:title="@string/title_ayuda">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/food"
                android:title="@string/title_terminos" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/food"
                android:title="@string/title_politica" />
            <item
                android:id="@+id/nav_discl"
                android:icon="@drawable/food"
                android:title="@string/title_disclaimer" />
        </menu>
    </item>
    <item
        android:id="@+id/btn_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/salir"
        />

</menu>
