<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context="com.amihealth.amihealth.Views.Fragmentos.Registro.view.UserInformationFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_btn_login"
        >



        <TextView
            android:id="@+id/rg_user_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_user_generales_titulo"
            android:textSize="@dimen/rg_user_titulo_size"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_btn_login"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColorHint="@color/accBlue">

                        <EditText
                            android:id="@+id/rg_cedula"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rg_user_cedula_edit"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="@dimen/global_text_size"
                            android:enabled="false"
                            />

                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:id="@+id/sp_ced"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        >

                    </Spinner>
                </RelativeLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColorHint="@color/accBlue">

                <EditText
                    android:id="@+id/rg_tomo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg_user_tomo_edit"
                    android:maxLength="4"
                    android:inputType="number"
                    android:textSize="@dimen/global_text_size"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColorHint="@color/accBlue">

                <EditText
                    android:id="@+id/rg_asiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg_user_asiento_edit"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="@dimen/global_text_size"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/accBlue">

            <EditText
                android:id="@+id/rg_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rg_user_name_edit"
                android:inputType="textPersonName"
                android:textSize="@dimen/global_text_size"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/accBlue">

            <EditText
                android:id="@+id/rg_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rg_user_lastname_edit"
                android:inputType="textPersonName"
                android:textSize="@dimen/global_text_size"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rg_lay_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColorHint="@color/accBlue"
                    >

                    <EditText
                        android:id="@+id/rg_fecha_nacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rg_user_nacimiento"
                        android:inputType="date"
                        android:textSize="@dimen/global_text_size"
                        android:enabled="false"
                        />

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btn_fecha_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_fecha"
                    />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <RelativeLayout
                android:id="@+id/sexo_ly"
                android:layout_width="match_parent"
                android:layout_height="@dimen/relative_sp_height"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_weight="0.5"
                >
                <TextView
                    android:id="@+id/rg_sexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg_user_sexo"
                    android:inputType="date"
                    android:textSize="@dimen/rg_text_sp"

                    android:enabled="false"
                    />

                <Spinner
                    android:id="@+id/rg_sp_sexo"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/sp_topPadding"

                    ></Spinner>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/relative_sp_height"
                android:layout_weight="0.5"
                android:id="@+id/etnia_ly">


                <TextView
                    android:id="@+id/rg_etnia_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg_user_etnia"
                    android:textSize="@dimen/rg_text_sp"
                    android:enabled="false"
                    />

                <Spinner
                    android:id="@+id/rg_etnia"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/sp_topPadding"
                    >
                </Spinner>
            </RelativeLayout>

        </LinearLayout>




    </LinearLayout>

</ScrollView>

</android.support.design.widget.CoordinatorLayout>
