<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.amihealth.amihealth.Views.Fragmentos.Registro.view.UserRegistroFragment"

    >

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="@dimen/margin_btn_login"

           >



           <TextView
               android:id="@+id/rg_user"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/rg_user_titulo"
               android:textSize="@dimen/rg_user_titulo_size"
               android:textColor="@color/primary_text"
               android:textStyle="bold"
               android:layout_marginBottom="@dimen/margin_btn_login"
               />

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColorHint="@color/accBlue"
               >

               <EditText
                   android:id="@+id/rg_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/rg_user_email_edit"
                   android:inputType="textEmailAddress"
                   android:textSize="@dimen/global_text_size"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
               android:textColorHint="@color/accBlue"
               app:passwordToggleTint="@color/dark_celesteBR"
               >

               <EditText
                   android:id="@+id/rg_pass"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/rg_user_pass_edit"
                   android:inputType="textPassword"
                   android:textSize="@dimen/global_text_size"
                   />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:passwordToggleEnabled="true"
               android:textColorHint="@color/accBlue"
               app:passwordToggleTint="@color/dark_celesteBR"

               >

               <EditText
                   android:id="@+id/rg_pass_confirm"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/rg_user_pass_confirm_edit"
                   android:inputType="textPassword"
                   android:textSize="@dimen/global_text_size"/>
           </android.support.design.widget.TextInputLayout>


       </LinearLayout>

   </ScrollView>

</android.support.design.widget.CoordinatorLayout>
