<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardPicture"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardPicture"
    app:cardCornerRadius="@dimen/cardview_radioborder"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/picture_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardPicture"

            android:scaleType="centerCrop"
            app:srcCompat="@drawable/amihealth" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/horizontal_activity_margin"
            android:paddingBottom="@dimen/horizontal_activity_margin"
            android:paddingTop="@dimen/horizontal_activity_margin"
            android:background="@color/card_linearbackground_color"
            >
            <TextView
                android:id="@+id/user_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usercard"
                android:textColor="@color/icons"
                android:textSize="@dimen/card_titulo"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_hace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_text"
                    android:textColor="@color/icons"
                    />
                <TextView
                    android:id="@+id/text_dias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_dias"
                    android:textColor="@color/icons"
                    android:layout_marginLeft="@dimen/margen_text_card_left"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/card_margintop_chech">

                <CheckBox
                    android:id="@+id/check_like_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selected_card"
                    />
                <TextView
                    android:id="@+id/card_like_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margen_text_card_left"
                    android:text="@string/text_card_number"
                    android:textColor="@color/icons"
                    />


            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>